overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -4489,7 +4489,7 @@ section {
   margin-bottom: 0;
   margin-top: -1px;
   position: relative;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 section > .bg {
