--- a/scss/theme-scss/_theme.scss
+++ b/scss/theme-scss/_theme.scss
@@ -72,7 +72,7 @@ section {
 	margin-bottom: $section-margin-bottom;
 	margin-top: -1px;
 	position: relative;
-	overflow-x: hidden;
+	overflow-y: hidden;
 	> .bg {
 		position: absolute;
 		top: 0;
